@@ -20,7 +20,7 @@
  *
  * @author Niels Pardon <mail@niels-pardon.de>
  */
-class tx_seminars_ViewHelper_Countdown {
+class Tx_Seminars_ViewHelper_Countdown {
 	/**
 	 * @var Tx_Oelib_Translator
 	 */
